crash_log/crash_20260122_135722.txt
=== 程序崩溃日志 ===
时间: 2026-01-22T13:57:22.878446
异常类型: SyntaxError
异常信息: invalid syntax (settings_panel.py, line 125)

=== 完整堆栈 ===
Traceback (most recent call last):
  File "C:\Users\Admin\Desktop\本地化\需备份\Deepseek一键翻译加强UI版\加强备份系统_github版本\main.py", line 98, in <module>
    main()
  File "C:\Users\Admin\Desktop\本地化\需备份\Deepseek一键翻译加强UI版\加强备份系统_github版本\main.py", line 84, in main
    from ui.main_window import MainWindow
  File "C:\Users\Admin\Desktop\本地化\需备份\Deepseek一键翻译加强UI版\加强备份系统_github版本\ui\main_window.py", line 28, in <module>
    from .settings_panel import SettingsPanel
  File "C:\Users\Admin\Desktop\本地化\需备份\Deepseek一键翻译加强UI版\加强备份系统_github版本\ui\settings_panel.py", line 125
    ui_layout.labelForField(self.log_refresh_spin := QSpinBox())
                                                  ^^
SyntaxError: invalid syntax
